# youtube-download-helper

./: .gitignore  AGENTS.md  CONTEXT.md  PLANS.md  README.md  pyproject.toml  requirements.txt  todo.md
.github/workflows/: release.yml
docs/adr/: 0001-sqlite-domain-state.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
scripts/: build_portable.ps1
src/ytdlp_helper/: __init__.py  __main__.py  activity_log.py  app.py  app_update.py  archive.py  browser_profiles.py  category_settings_controller.py  config.py  cookies.py  database.py  dependencies.py  download_history_viewer.py  download_queue.py  downloader.py  i18n.py  playlist_tracker.py  queue_item_controller.py  tracked_playlist_controller.py  update_service.py  worker_status.py
src/ytdlp_helper/resources/: pause.xbm  play.xbm
tests/: test_activity_log.py  test_app_status.py  test_app_update.py  test_archive.py  test_browser_profiles.py  test_build_script.py  test_category_settings_controller.py  test_config.py  test_cookies.py  test_database.py  test_dependencies.py  test_download_history_viewer.py  test_download_queue.py  test_downloader.py  test_i18n.py  test_queue_item_controller.py  test_release_workflow.py  test_tracked_playlist_controller.py  test_worker_status.py
